// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/ViewSection Address 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="view-section"
  >
    <header
      className="view-header"
    >
      <h2
        className="view-title"
      >
        My Section
      </h2>
    </header>
    <div
      className="view-grid md:grid md:grid-cols-1 gap-y-4 bg-primary-lighter"
    >
      <div
        className="view-group"
      >
        <h3
          className="view-group__title"
        >
          Residence Address
        </h3>
        <div
          className="view-subgrid md:grid md:grid-cols-4 md:gap-8"
        >
          <ViewItem
            className="md:col-span-3"
            label="Street Address"
            value="112 Springfield St."
          >
            <p
              className="view-item md:col-span-3"
            >
              <span
                className="view-item__label"
              >
                Street Address
              </span>
              <span
                className="view-item__value"
              >
                112 Springfield St.
              </span>
            </p>
          </ViewItem>
          <ViewItem
            label="Apt Unit #"
            value="1"
          >
            <p
              className="view-item"
            >
              <span
                className="view-item__label"
              >
                Apt Unit #
              </span>
              <span
                className="view-item__value"
              >
                1
              </span>
            </p>
          </ViewItem>
          <ViewItem
            className="md:col-span-2"
            label="City"
            value="Oakland"
          >
            <p
              className="view-item md:col-span-2"
            >
              <span
                className="view-item__label"
              >
                City
              </span>
              <span
                className="view-item__value"
              >
                Oakland
              </span>
            </p>
          </ViewItem>
          <ViewItem
            label="State"
            value="CA"
          >
            <p
              className="view-item"
            >
              <span
                className="view-item__label"
              >
                State
              </span>
              <span
                className="view-item__value"
              >
                CA
              </span>
            </p>
          </ViewItem>
          <ViewItem
            label="Zip"
            value="94577"
          >
            <p
              className="view-item"
            >
              <span
                className="view-item__label"
              >
                Zip
              </span>
              <span
                className="view-item__value"
              >
                94577
              </span>
            </p>
          </ViewItem>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototypes/ViewSection Four Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    className="md:grid md:grid-cols-4 md:gap-8"
    tinted={true}
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-header"
      >
        <h2
          className="view-title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="view-grid bg-primary-lighter md:grid md:grid-cols-4 md:gap-8"
      >
        <ViewItem
          label="First Name"
          value="Lisa"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              First Name
            </span>
            <span
              className="view-item__value"
            >
              Lisa
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Middle Name"
          value="S"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Middle Name
            </span>
            <span
              className="view-item__value"
            >
              S
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Last Name"
          value="Jones"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Last Name
            </span>
            <span
              className="view-item__value"
            >
              Jones
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Date of Birth"
          value="01/01/1985"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Date of Birth
            </span>
            <span
              className="view-item__value"
            >
              01/01/1985
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Email"
          value="lisa@gmail.com"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Email
            </span>
            <span
              className="view-item__value"
            >
              lisa@gmail.com
            </span>
          </p>
        </ViewItem>
        <ViewItem
          helper="Cell"
          label="Phone"
          value="111-222-3333"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Phone
            </span>
            <span
              className="view-item__value"
            >
              111-222-3333
            </span>
            <span
              className="view-item__helper"
            >
              Cell
            </span>
          </p>
        </ViewItem>
        <ViewItem
          helper="Work"
          label="Second Phone"
          value="111-222-3333"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Second Phone
            </span>
            <span
              className="view-item__value"
            >
              111-222-3333
            </span>
            <span
              className="view-item__helper"
            >
              Work
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Perferred Contact"
          value="Phone"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Perferred Contact
            </span>
            <span
              className="view-item__value"
            >
              Phone
            </span>
          </p>
        </ViewItem>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Prototypes/ViewSection Four Columns Edit 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <ViewSection
    className="md:grid md:grid-cols-4 md:gap-8"
    edit="Edit"
    tinted={true}
    title="Section Title"
  >
    <div
      className="view-section"
    >
      <header
        className="view-header"
      >
        <h2
          className="view-title"
        >
          Section Title
        </h2>
        <span
          className="ml-auto"
        >
          <a
            className="edit-link"
          >
            Edit
          </a>
        </span>
      </header>
      <div
        className="view-grid bg-primary-lighter md:grid md:grid-cols-4 md:gap-8"
      >
        <ViewItem
          label="First Name"
          value="Lisa"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              First Name
            </span>
            <span
              className="view-item__value"
            >
              Lisa
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Middle Name"
          value="S"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Middle Name
            </span>
            <span
              className="view-item__value"
            >
              S
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Last Name"
          value="Jones"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Last Name
            </span>
            <span
              className="view-item__value"
            >
              Jones
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Date of Birth"
          value="01/01/1985"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Date of Birth
            </span>
            <span
              className="view-item__value"
            >
              01/01/1985
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Email"
          value="lisa@gmail.com"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Email
            </span>
            <span
              className="view-item__value"
            >
              lisa@gmail.com
            </span>
          </p>
        </ViewItem>
        <ViewItem
          helper="Cell"
          label="Phone"
          value="111-222-3333"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Phone
            </span>
            <span
              className="view-item__value"
            >
              111-222-3333
            </span>
            <span
              className="view-item__helper"
            >
              Cell
            </span>
          </p>
        </ViewItem>
        <ViewItem
          helper="Work"
          label="Second Phone"
          value="111-222-3333"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Second Phone
            </span>
            <span
              className="view-item__value"
            >
              111-222-3333
            </span>
            <span
              className="view-item__helper"
            >
              Work
            </span>
          </p>
        </ViewItem>
        <ViewItem
          label="Perferred Contact"
          value="Phone"
        >
          <p
            className="view-item"
          >
            <span
              className="view-item__label"
            >
              Perferred Contact
            </span>
            <span
              className="view-item__value"
            >
              Phone
            </span>
          </p>
        </ViewItem>
      </div>
    </div>
  </ViewSection>
</div>
`;

exports[`Storyshots Prototypes/ViewSection View Section Single Column 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="view-section"
  >
    <h3
      className="view-group__title"
    >
      My Group
    </h3>
    <div
      className="view-grid md:grid md:grid-cols-1 gap-y-4 bg-primary-lighter"
    >
      <ViewItem
        label="First Name"
        value="Lisa"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            First Name
          </span>
          <span
            className="view-item__value"
          >
            Lisa
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Middle Name"
        value="S"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Middle Name
          </span>
          <span
            className="view-item__value"
          >
            S
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Last Name"
        value="Jones"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Last Name
          </span>
          <span
            className="view-item__value"
          >
            Jones
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Date of Birth"
        value="01/01/1985"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Date of Birth
          </span>
          <span
            className="view-item__value"
          >
            01/01/1985
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Email"
        value="lisa@gmail.com"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Email
          </span>
          <span
            className="view-item__value"
          >
            lisa@gmail.com
          </span>
        </p>
      </ViewItem>
      <ViewItem
        helper="Cell"
        label="Phone"
        value="111-222-3333"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Phone
          </span>
          <span
            className="view-item__value"
          >
            111-222-3333
          </span>
          <span
            className="view-item__helper"
          >
            Cell
          </span>
        </p>
      </ViewItem>
      <ViewItem
        helper="Work"
        label="Second Phone"
        value="111-222-3333"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Second Phone
          </span>
          <span
            className="view-item__value"
          >
            111-222-3333
          </span>
          <span
            className="view-item__helper"
          >
            Work
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Perferred Contact"
        value="Phone"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Perferred Contact
          </span>
          <span
            className="view-item__value"
          >
            Phone
          </span>
        </p>
      </ViewItem>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototypes/ViewSection View Section Single Column Warn 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="view-section"
  >
    <p
      className="view-item"
    >
      <span
        className="view-item__label"
      >
        Application Number
      </span>
      <span
        className="view-item__value"
      >
        APP-0001002002
      </span>
    </p>
    <div
      className="bg-primary-lighter my-4 p-4"
    >
      <fieldset>
        <legend
          className="field-note mb-4 text-gray-750"
        >
          Confirm this application is valid:
        </legend>
        <div
          className="field-group--inline"
        >
          <div
            className="field "
          >
            <input
              id="testvalidappkeep"
              name="testvalidapp"
              type="radio"
              value="keep"
            />
            <label
              className="font-semibold"
              htmlFor="testvalidappkeep"
            >
              Keep
            </label>
          </div>
          <div
            className="field "
          >
            <input
              id="testvalidappremove"
              name="testvalidapp"
              type="radio"
              value="remove"
            />
            <label
              className="font-semibold"
              htmlFor="testvalidappremove"
            >
              Remove
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <h3
      className="view-group__title"
    >
      My Group
    </h3>
    <div
      className="view-grid md:grid md:grid-cols-1 gap-y-4 bg-primary-lighter"
    >
      <ViewItem
        flagged={true}
        label="First Name"
        value="Lisa"
      >
        <p
          className="view-item is-flagged"
        >
          <span
            className="view-item__label"
          >
            First Name
          </span>
          <span
            className="view-item__value"
          >
            Lisa
          </span>
        </p>
      </ViewItem>
      <ViewItem
        flagged={true}
        label="Middle Name"
        value="S"
      >
        <p
          className="view-item is-flagged"
        >
          <span
            className="view-item__label"
          >
            Middle Name
          </span>
          <span
            className="view-item__value"
          >
            S
          </span>
        </p>
      </ViewItem>
      <ViewItem
        flagged={true}
        label="Last Name"
        value="Jones"
      >
        <p
          className="view-item is-flagged"
        >
          <span
            className="view-item__label"
          >
            Last Name
          </span>
          <span
            className="view-item__value"
          >
            Jones
          </span>
        </p>
      </ViewItem>
      <ViewItem
        flagged={true}
        label="Date of Birth"
        value="01/01/1985"
      >
        <p
          className="view-item is-flagged"
        >
          <span
            className="view-item__label"
          >
            Date of Birth
          </span>
          <span
            className="view-item__value"
          >
            01/01/1985
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Email"
        value="lisa@gmail.com"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Email
          </span>
          <span
            className="view-item__value"
          >
            lisa@gmail.com
          </span>
        </p>
      </ViewItem>
      <ViewItem
        helper="Cell"
        label="Phone"
        value="111-222-3333"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Phone
          </span>
          <span
            className="view-item__value"
          >
            111-222-3333
          </span>
          <span
            className="view-item__helper"
          >
            Cell
          </span>
        </p>
      </ViewItem>
      <ViewItem
        helper="Work"
        label="Second Phone"
        value="111-222-3333"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Second Phone
          </span>
          <span
            className="view-item__value"
          >
            111-222-3333
          </span>
          <span
            className="view-item__helper"
          >
            Work
          </span>
        </p>
      </ViewItem>
      <ViewItem
        label="Perferred Contact"
        value="Phone"
      >
        <p
          className="view-item"
        >
          <span
            className="view-item__label"
          >
            Perferred Contact
          </span>
          <span
            className="view-item__value"
          >
            Phone
          </span>
        </p>
      </ViewItem>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototypes/ViewSection View Section Table 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="view-section"
  >
    <header
      className="view-header"
    >
      <h2
        className="view-title"
      >
        My Section
      </h2>
    </header>
    <div
      className="view-grid bg-primary-lighter"
    >
      <SimpleTable>
        <table
          className="td-plain th-plain text-sm w-full"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Relationship
              </th>
              <th>
                DOB
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="px-5 py-3"
              >
                Jim Halpert
              </td>
              <td
                className="px-5 py-3"
              >
                Husband
              </td>
              <td
                className="px-5 py-3"
              >
                05/01/1985
              </td>
            </tr>
            <tr>
              <td
                className="px-5 py-3"
              >
                Michael Scott
              </td>
              <td
                className="px-5 py-3"
              >
                Friend
              </td>
              <td
                className="px-5 py-3"
              >
                05/01/1975
              </td>
            </tr>
          </tbody>
        </table>
      </SimpleTable>
    </div>
  </div>
</div>
`;
